--- a/E-EstateV2/src/app/field-production-detail/field-production-detail.component.html
+++ b/E-EstateV2/src/app/field-production-detail/field-production-detail.component.html
@@ -1,6 +1,6 @@
 <br />
 <h1 style="padding-left: 17px">{{ product.fieldName }}</h1>
-<span style="color: red;padding-left: 17px">*If there is no production, please insert 0</span>
+<!-- <span style="color: red;padding-left: 17px">*If there is no production, please insert 0</span> -->
 <div style="overflow-x: auto; padding: 10px">
   <table style="width: 100%">
     <tr>
@@ -8,10 +8,10 @@
       <th>Cuplump DRC (%)</th>
       <th>Latex Production (Kg)</th>
       <th>Latex DRC (%)</th>
-      <th>USS Production (Kg)</th>
+      <!-- <th>USS Production (Kg)</th>
       <th>USS DRC (%)</th>
       <th>Others (Kg)</th>
-      <th>Others DRC (%)</th>
+      <th>Others DRC (%)</th> -->
       <th>No of Task Tap</th>
       <th>No of Task UnTap</th>
       <th>Remark Untap</th>
@@ -24,11 +24,11 @@
       <td><input type="number" name="latex" [(ngModel)]="product.latex" (input)="initialZeroLatex(product.latex)" />
       </td>
       <td><input type="number" name="latexDRC" [(ngModel)]="product.latexDRC" /></td>
-      <td><input type="number" name="USS" [(ngModel)]="product.uss" (input)="initialZeroUSS(product.uss)" /></td>
+      <!-- <td><input type="number" name="USS" [(ngModel)]="product.uss" (input)="initialZeroUSS(product.uss)" /></td>
       <td><input type="number" name="USSDRC" [(ngModel)]="product.ussDRC" /></td>
       <td><input type="number" name="others" [(ngModel)]="product.others" (input)="initialZeroOthers(product.others)" />
       </td>
-      <td><input type="number" name="othersDRC" [(ngModel)]="product.othersDRC" /></td>
+      <td><input type="number" name="othersDRC" [(ngModel)]="product.othersDRC" /></td> -->
       <td><input type="number" name="noTaskTap" [(ngModel)]="product.noTaskTap"
           (change)="taskTap(product.noTaskTap, product.totalTask)" /></td>
       <td><input type="number" name="noTaskUntap" [(ngModel)]="product.noTaskUntap" disabled /></td>
