--- a/E-EstateV2/src/app/home/home-admin-lgm/home-admin-lgm.component.html
+++ b/E-EstateV2/src/app/home/home-admin-lgm/home-admin-lgm.component.html
@@ -1,131 +1,196 @@
 <h1 class="tittle">Dashboard Admin</h1>
 <hr />
 
+<div style="columns:2">
+  <div class="box-container-outer">
+    <span style="font-size: 11px;">Current total</span>
+    <div class="box">
+      <div class="column box-container color1">
+        <div class="span-word">
+          <span>Company</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingCompany">{{totalCompany}}</span>
+        </div>
+        <div *ngIf="isLoadingCompany">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
 
-<div class="box">
-</div> <br />
-
-<div class="box">
-  <div class="column box-container color3">
-    <span>Current Total Company</span><br />
-    <span style="font-weight: bold;" *ngIf="!isLoadingCompany">{{totalCompany}}</span>
-    <div *ngIf="isLoadingCompany">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+      <div class="column box-container color2">
+        <div class="span-word">
+          <span>Estate</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingEstate">{{totalEstate}}</span>
+        </div>
+        <div *ngIf="isLoadingEstate">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="column box-container color4">
-    <span>Current Total Estate</span><br />
-    <span style="font-weight: bold;" *ngIf="!isLoadingEstate">{{totalEstate}}</span>
-    <div *ngIf="isLoadingEstate">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
+  <br />
+
+  <div class="box-container-outer">
+    <span style="font-size: 11px;">Current Field Area (Ha)</span>
+    <div class="box">
+      <div class="column box-container color3">
+        <div class="span-word">
+          <span>Tapped</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingTapped">{{tappedArea}}</span>
+        </div>
+        <div *ngIf="isLoadingTapped">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div style="columns:2">
+  <div class="box-container-outer">
+    <span style="font-size: 11px;">Current Worker</span>
+    <div class="box">
+      <div class="column box-container color4">
+        <div class="span-word">
+          <span>Tapper</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingTapper">{{currentTotalTapper}}</span>
+        </div>
+        <div *ngIf="isLoadingTapper">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+
+      <div class="column box-container color1">
+        <div class="span-word">
+          <span>Field</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingField">{{currentTotalField}}</span>
+        </div>
+        <div *ngIf="isLoadingField">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="box-container-outer">
+    <span style="font-size: 11px;">Current Worker Needed</span>
+    <div class="box">
+      <div class="column box-container color3">
+        <div class="span-word">
+          <span>Tapper</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingTapperNeeded">{{totalTapperNeeded}}</span>
+        </div>
+        <div *ngIf="isLoadingTapperNeeded">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+
+      <div class="column box-container color4">
+        <div class="span-word">
+          <span>Field</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingFieldNeeded">{{totalFieldNeeded}}</span>
+        </div>
+        <div *ngIf="isLoadingFieldNeeded">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="box-container-outer">
+    <span style="font-size: 11px;">Current Worker Shortage</span>
+    <div class="box">
+      <div class="column box-container color2">
+        <div class="span-word">
+          <span>Tapper</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingTapperShortage">{{tapperShortage}}</span>
+        </div>
+        <div *ngIf="isLoadingTapperShortage">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+      <div class="column box-container color3">
+        <div class="span-word">
+          <span>Field</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingFieldShortage">{{fieldShortage}}</span>
+        </div>
+        <div *ngIf="isLoadingFieldShortage">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 <br />
 
-<div class="box">
-  <div class="column box-container color5">
-    <span>Current Tapper Worker</span><br />
-    <span style="font-weight: bold;" *ngIf="!isLoadingTapper">{{currentTotalTapper}}</span>
-    <div *ngIf="isLoadingTapper">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
-    </div>
-  </div>
-  <div class="column box-container color6">
-    <span>Current Field Worker</span><br />
-    <span style="font-weight: bold;" *ngIf="!isLoadingField">{{currentTotalField}}</span>
-    <div *ngIf="isLoadingField">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
+<div style="columns:2">
+  <div class="box-container-outer">
+    <span style="font-size: 11px;">Current Rubber Dry Production (Kg)</span>
+    <div class="box">
+      <div class="column box-container color4">
+        <div class="span-word">
+          <span>Cuplump</span><br />
+          <div *ngIf="!isLoadingProduction">
+            <b><span>{{totalCuplumpDry | number: '1.2-2'}}</span></b>
+          </div>
+        </div>
+        <div *ngIf="isLoadingProduction">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+
+      <div class="column box-container color1">
+        <div class="span-word">
+          <span>Latex</span><br />
+          <div *ngIf="!isLoadingProduction">
+            <b><span>{{totalLatexDry | number: '1.2-2'}}</span></b>
+          </div>
+        </div>
+        <div *ngIf="isLoadingProduction">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+
+      <div class="column box-container color2">
+        <div class="span-word">
+          <span>Total</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingProduction">{{totalCuplumpDry + totalLatexDry | number: '1.2-2' }}</span>
+        </div>
+        <div *ngIf="isLoadingProduction">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+      
     </div>
   </div>
 
-  <div class="column box-container color1">
-    <span>Tapper Worker Needed</span><br />
-    <span style="font-weight: bold;" *ngIf="!isLoadingTapperNeeded">{{totalTapperNeeded}}</span>
-    <div *ngIf="isLoadingTapperNeeded">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+  <div class="box-container-outer">
+    <span style="font-size: 11px;">Current Cost of Production (RM/Kg)</span>
+    <div class="box">
+      <div class="column box-container color3">
+        <div class="span-word">
+          <span>COP</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingCop">{{ getCalculatedCop() | number: '1.2-2' }}</span>
+        </div>
+        <div *ngIf="isLoadingCop">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="column box-container color2">
-    <span>Field Worker Needed</span><br />
-    <span style="font-weight: bold;" *ngIf="!isLoadingFieldNeeded">{{totalFieldNeeded}}</span>
-    <div *ngIf="isLoadingFieldNeeded">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
-    </div>
-  </div>
-
-  <div class="column box-container color1">
-    <span>Tapper Worker Shortage</span><br />
-    <span style="font-weight: bold;" *ngIf="!isLoadingTapperShortage">{{tapperShortage}}</span>
-    <div *ngIf="isLoadingTapperShortage">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
-    </div>
-  </div>
-  <div class="column box-container color2">
-    <span>Field Worker Shortage</span><br />
-    <span style="font-weight: bold;" *ngIf="!isLoadingFieldShortage">{{fieldShortage}}</span>
-    <div *ngIf="isLoadingFieldShortage">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
-    </div>
-  </div>
-
+<br/>
 </div>
-<br />
-
-<div class="box">
-  <div class="column box-container color3">
-    <span>Cuplump Dry Production (Kg)</span><br />
-    <div *ngIf="isLoadingProduction">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
-    </div>
-    <div *ngIf="!isLoadingProduction">
-      <b><span>{{totalCuplumpDry | number: '1.2-2'}}</span></b>
-    </div>
-  </div>
-
-  <div class="column box-container color4">
-    <span>Latex Dry Production (Kg)</span><br />
-    <div *ngIf="isLoadingProduction">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
-    </div>
-    <div *ngIf="!isLoadingProduction">
-      <b><span>{{totalLatexDry | number: '1.2-2'}}</span></b>
-    </div>
-  </div>
-
-  <div class="column box-container color5">
-    <span>USS Dry Production (Kg)</span><br />
-    <div *ngIf="isLoadingProduction">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#48aaad91'}"></ngx-skeleton-loader>
-    </div>
-    <div *ngIf="!isLoadingProduction">
-      <b><span>{{totalUSSDry | number: '1.2-2'}}</span></b>
-    </div>
-  </div>
-
-  <div class="column box-container color6">
-    <span>Other Dry Production (Kg)</span><br />
-    <div *ngIf="isLoadingProduction">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#4872ad8a'}"></ngx-skeleton-loader>
-    </div>
-    <div *ngIf="!isLoadingProduction">
-      <b><span>{{totalOthersDry | number: '1.2-2'}}</span></b>
-    </div>
-  </div>
-</div>
-<br />
 
 <div class="box" style="justify-content: left;">
   <div class="column box-container" style="color:black;margin: none;">
