--- a/E-EstateV2/src/styles.css
+++ b/E-EstateV2/src/styles.css
@@ -156,6 +156,15 @@ body {
   background-color: ghostwhite;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+
+.box-container-outer {
+  padding: 13px;
+  border-radius: 10px;
+  background-color: ghostwhite;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .box-container > hr {
   margin-top: -10px;
 }
@@ -350,4 +359,8 @@ input:checked + .slider:before {
   vertical-align: middle;
   margin-left: 5px;
   margin-top: 4px;
+}
+
+.span-word {
+  margin-top: 10px;
 }
