--- a/E-EstateV2/src/app/home/home-company-admin/home-company-admin.component.css
+++ b/E-EstateV2/src/app/home/home-company-admin/home-company-admin.component.css
@@ -13,17 +13,22 @@
 
 .color1 {
   background-color: #59788e96;
-  height: 55px;
+  height: 65px;
 }
 
 .color2 {
   background-color: #0492c259;
-  height: 55px;
+  height: 65px;
 }
 
 .color3 {
   background-color: #48aaad91;
-  height: 90px;
+  height: 65px;
+}
+
+.color4 {
+  background-color: #4872ad8a;
+  height: 65px;
 }
 
 .mat-h1 {
