--- a/E-EstateV2/src/app/home/home-company-admin/home-company-admin.component.html
+++ b/E-EstateV2/src/app/home/home-company-admin/home-company-admin.component.html
@@ -6,14 +6,113 @@
 
 <hr />
 
-<div class="box">
-  <div class="column box-container color1">
-    <span>Current Total Estate</span><br />
-    <span style="font-weight: bold;" *ngIf="!isLoadingEstate">{{totalEstate}}</span>
-    <div *ngIf="isLoadingEstate">
-      <ngx-skeleton-loader appearance="line" animation="progress-dark"
-        [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+<div style="columns:2">
+  <div class="box-container-outer">
+    <span style="font-size: 11px;">Current total</span>
+    <div class="box">
+      <div class="column box-container color1">
+        <div class="span-word">
+          <span>Estate</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingEstate">{{totalEstate}}</span>
+        </div>
+        <div *ngIf="isLoadingEstate">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br />
+
+  <div class="box-container-outer">
+    <span style="font-size: 11px;">Current Field Area (Ha)</span>
+    <div class="box">
+      <div class="column box-container color2">
+        <div class="span-word">
+          <span>Tapped</span><br />
+          <span style="font-weight: bold;" *ngIf="!isLoadingTapped">{{tappedArea}}</span>
+        </div>
+        <div *ngIf="isLoadingTapped">
+          <ngx-skeleton-loader appearance="line" animation="progress-dark"
+            [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-<br>
+
+<div class="box-container-outer">
+  <span style="font-size: 11px;">Current Rubber Dry Production (Kg)</span>
+  <div class="box">
+    <div class="column box-container color3">
+      <div class="span-word">
+        <span>Cuplump</span><br />
+        <div *ngIf="!isLoadingProduction">
+          <b><span>{{totalCuplumpDry | number: '1.2-2'}}</span></b>
+        </div>
+      </div>
+      <div *ngIf="isLoadingProduction">
+        <ngx-skeleton-loader appearance="line" animation="progress-dark"
+          [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+      </div>
+    </div>
+
+    <div class="column box-container color4">
+      <div class="span-word">
+        <span>Latex</span><br />
+        <div *ngIf="!isLoadingProduction">
+          <b><span>{{totalLatexDry | number: '1.2-2'}}</span></b>
+        </div>
+      </div>
+      <div *ngIf="isLoadingProduction">
+        <ngx-skeleton-loader appearance="line" animation="progress-dark"
+          [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
+      </div>
+    </div>
+
+    <div class="column box-container color1">
+      <div class="span-word">
+        <span>Total</span><br />
+        <span style="font-weight: bold;" *ngIf="!isLoadingProduction">{{totalCuplumpDry + totalLatexDry | number:
+          '1.2-2' }}</span>
+      </div>
+      <div *ngIf="isLoadingProduction">
+        <ngx-skeleton-loader appearance="line" animation="progress-dark"
+          [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+      </div>
+    </div>
+  </div>
+</div>
+<br />
+
+<div class="box-container-outer">
+  <span style="font-size: 11px;">Productivity (Kg/Ha) </span>
+  <div class="box">
+    <div class="column box-container color3">
+      <div class="span-word">
+        <span>Malaysia</span><br />
+        <div *ngIf="!isLoadingMalaysia">
+          <b><span>{{ (totalCuplumpDryMalaysia + totalLatexDryMalaysia)/tappedAreaMalaysia || 0 | number:
+              '1.2-2'}}</span></b>
+        </div>
+      </div>
+      <div *ngIf="isLoadingMalaysia">
+        <ngx-skeleton-loader appearance="line" animation="progress-dark"
+          [theme]="{'height':'30px', 'width':'80px', 'background-color':'#59788e96'}"></ngx-skeleton-loader>
+      </div>
+    </div>
+
+    <div class="column box-container color4">
+      <div class="span-word">
+        <span>Company</span><br />
+        <div *ngIf="!isLoadingCompany">
+          <b><span>{{ (totalCuplumpDry + totalLatexDry)/tappedArea || 0 | number: '1.2-2'}}</span></b>
+        </div>
+      </div>
+      <div *ngIf="isLoadingCompany">
+        <ngx-skeleton-loader appearance="line" animation="progress-dark"
+          [theme]="{'height':'30px', 'width':'80px', 'background-color':'#0492c259'}"></ngx-skeleton-loader>
+      </div>
+    </div>
+  </div>
+</div>
