--- a/E-EstateV2/src/app/report-labor-information/labor-information-yearly/labor-information-yearly.component.html
+++ b/E-EstateV2/src/app/report-labor-information/labor-information-yearly/labor-information-yearly.component.html
@@ -1,7 +1,7 @@
 <div class="box-container">
   <h1>Labor Information</h1>
 
-  <div style="columns:2"
+  <div style="columns:3"
     [ngClass]="{'display': role == 'CompanyAdmin', 'none':role == 'EstateClerk' || role == 'Admin'}">
     <div>
       <label>Company</label>
@@ -13,16 +13,41 @@
         {{estate.name}}
       </mat-option>
     </mat-select>
+    
+      <label>Please choose year: </label>
+      <input type="number" style="text-align: center;" placeholder="yyyy" [(ngModel)]="year" (change)="yearSelected()" />
+
   </div>
 
-  <div style="columns: 1;"
+  <div style="columns: 2;"
     [ngClass]="{'display': role == 'EstateClerk', 'none':role == 'CompanyAdmin' || role == 'Admin'}">
     <label>Estate : </label>
     <input type="text" [value]="estate.name" disabled />
+
+    <label>Please choose year: </label>
+    <input type="number" style="text-align: center;" placeholder="yyyy" [(ngModel)]="year" (change)="yearSelected()" />
+
   </div>
 
-  <br/>
-  
+  <div *ngIf="role=='Admin'">
+    <label>Please choose year: </label>
+    <input type="number" style="text-align: center;" placeholder="yyyy" [(ngModel)]="year" (change)="yearSelected()" />
+  </div>
+
+  <div style="margin-top: 3px; margin-bottom: 3px;" *ngIf="role == 'Admin'">
+    <button class="btn-add"
+      (click)="exportToExcelAdmin(labors,localTapperFieldWorker,foreignTapperFieldWorker, 'Labor Information By Category Report ' + year)">
+      Export Excel &nbsp; <i class="fa fa-file"></i>
+    </button>
+  </div>
+
+  <div style="margin-top: 3px; margin-bottom: 3px;" *ngIf="role != 'Admin'">
+    <button class="btn-add"
+      (click)="exportToExcelCompanyAdmin(labors,localTapperFieldWorker,foreignTapperFieldWorker, 'Labor Information By Category Report ' + year)">
+      Export Excel &nbsp; <i class="fa fa-file"></i>
+    </button>
+  </div>
+
   <div style="overflow-x: auto;">
     <table style="width: 100%;">
       <tr>
@@ -54,81 +79,76 @@
 
       <tbody *ngIf="!isLoading && labors.length > 0">
         <ng-container *ngIf="showAll">
-        <tr *ngFor="let labor of labors; let i=index">
-          <td>{{ i + 1 }}</td>
-          <td>{{ labor.laborType }}</td>
-          <td>{{ labor.totalAmountLocal }}</td>
-          <td>{{ labor.totalAmountForeign }}</td>
-          <td>{{ labor.totalAmountLocal + labor.totalAmountForeign }}</td>
-        </tr>
-      </ng-container>
+          <tr *ngFor="let labor of labors; let i=index">
+            <td>{{ i + 1 }}</td>
+            <td>{{ labor.laborType }}</td>
+            <td>{{ labor.totalAmountLocal }}</td>
+            <td>{{ labor.totalAmountForeign }}</td>
+            <td>{{ labor.totalAmountLocal + labor.totalAmountForeign }}</td>
+          </tr>
+        </ng-container>
 
-      <ng-container *ngIf="showAll">
-        <tr>
-          <td>{{ labors.length + 1 }}</td>
-          <td>TAPPER WORKER</td>
-          <ng-container *ngFor="let local of localTapperFieldWorker">
-            <td>{{ local.totalTapperWorker }}</td>
-          </ng-container>
-          <ng-container *ngFor="let local of foreignTapperFieldWorker">
-            <td>{{ local.totalTapperWorker }}</td>
-          </ng-container>
-          <td>{{ totalTapperWorker }}</td>
-        </tr>
+        <ng-container *ngIf="showAll">
+          <tr>
+            <td>{{ labors.length + 1 }}</td>
+            <td>TAPPER WORKER</td>
+            <ng-container *ngFor="let local of localTapperFieldWorker">
+              <td>{{ local.totalTapperWorker }}</td>
+            </ng-container>
+            <ng-container *ngFor="let local of foreignTapperFieldWorker">
+              <td>{{ local.totalTapperWorker }}</td>
+            </ng-container>
+            <td>{{ totalTapperWorker }}</td>
+          </tr>
 
-        <tr>
-          <td>{{ labors.length + 2 }}</td>
-          <td>FIELD WORKER</td>
-          <ng-container *ngFor="let local of localTapperFieldWorker">
-            <td>{{ local.totalFieldWorker }}</td>
-          </ng-container>
-          <ng-container *ngFor="let local of foreignTapperFieldWorker">
-            <td>{{ local.totalFieldWorker }}</td>
-          </ng-container>
-          <td>{{ totalFieldWorker }}</td>
-        </tr>
-      </ng-container>
+          <tr>
+            <td>{{ labors.length + 2 }}</td>
+            <td>FIELD WORKER</td>
+            <ng-container *ngFor="let local of localTapperFieldWorker">
+              <td>{{ local.totalFieldWorker }}</td>
+            </ng-container>
+            <ng-container *ngFor="let local of foreignTapperFieldWorker">
+              <td>{{ local.totalFieldWorker }}</td>
+            </ng-container>
+            <td>{{ totalFieldWorker }}</td>
+          </tr>
+        </ng-container>
 
-      <ng-container *ngIf="!showAll">
-        <tr *ngFor="let labor of labors; let i=index">
-          <td>{{ i + 1 }}</td>
-          <td>{{ labor.laborType }}</td>
-          <td>{{ labor.localNoOfWorkers }}</td>
-          <td>{{ labor.foreignNoOfWorkers }}</td>
-          <td>{{ labor.localNoOfWorkers + labor.foreignNoOfWorkers }}</td>
-        </tr>
-      </ng-container>
+        <ng-container *ngIf="!showAll">
+          <tr *ngFor="let labor of labors; let i=index">
+            <td>{{ i + 1 }}</td>
+            <td>{{ labor.laborType }}</td>
+            <td>{{ labor.localNoOfWorkers }}</td>
+            <td>{{ labor.foreignNoOfWorkers }}</td>
+            <td>{{ labor.localNoOfWorkers + labor.foreignNoOfWorkers }}</td>
+          </tr>
+        </ng-container>
 
-      <ng-container *ngIf="!showAll">
-        <tr>
-          <td>{{ labors.length + 1 }}</td>
-          <td>TAPPER WORKER</td>
-          <ng-container *ngFor="let local of localTapperFieldWorker">
-            <td>{{ local.tapperWorker }}</td>
-          </ng-container>
-          <ng-container *ngFor="let local of foreignTapperFieldWorker">
-            <td>{{ local.tapperWorker }}</td>
-          </ng-container>
-          <td>{{ totalTapperWorker }}</td>
-        </tr>
+        <ng-container *ngIf="!showAll">
+          <tr>
+            <td>{{ labors.length + 1 }}</td>
+            <td>TAPPER WORKER</td>
+            <ng-container *ngFor="let local of localTapperFieldWorker">
+              <td>{{ local.tapperWorker }}</td>
+            </ng-container>
+            <ng-container *ngFor="let local of foreignTapperFieldWorker">
+              <td>{{ local.tapperWorker }}</td>
+            </ng-container>
+            <td>{{ totalTapperWorker }}</td>
+          </tr>
 
-        <tr>
-          <td>{{ labors.length + 2 }}</td>
-          <td>FIELD WORKER</td>
-          <ng-container *ngFor="let local of localTapperFieldWorker">
-            <td>{{ local.fieldWorker }}</td>
-          </ng-container>
-          <ng-container *ngFor="let local of foreignTapperFieldWorker">
-            <td>{{ local.fieldWorker }}</td>
-          </ng-container>
-          <td>{{ totalFieldWorker }}</td>
-        </tr>
-      </ng-container>
-
-
-      
-
-
+          <tr>
+            <td>{{ labors.length + 2 }}</td>
+            <td>FIELD WORKER</td>
+            <ng-container *ngFor="let local of localTapperFieldWorker">
+              <td>{{ local.fieldWorker }}</td>
+            </ng-container>
+            <ng-container *ngFor="let local of foreignTapperFieldWorker">
+              <td>{{ local.fieldWorker }}</td>
+            </ng-container>
+            <td>{{ totalFieldWorker }}</td>
+          </tr>
+        </ng-container>
       </tbody>
     </table>
   </div>
