--- a/E-EstateV2/src/app/notification/notification.component.html
+++ b/E-EstateV2/src/app/notification/notification.component.html
@@ -14,4 +14,16 @@
         year, Please state the reason <a
             (click)="openDialog(sumTotalDryCurrentMonthYear, sumTotalDryPreviousMonthYear )">here</a>
     </div>
+
+    <div class="alert" *ngIf="warningProductionDrafted" style="background-color: yellow;color: black;">
+        <i class="fa fa-exclamation"></i> &nbsp; You have rubber production in drafted, please submit <a
+        [routerLink]="['/e-estate/field-production/', estateId]">here</a>
+    </div>
+
+    <div class="alert" *ngIf="warningCostDrafted" style="background-color: yellow;color: black;">
+        <i class="fa fa-exclamation"></i> &nbsp; You have cost information in drafted, please submit <a
+        [routerLink]="['/e-estate/cost-info/', estateId]">here</a>
+    </div>
+
+
 </div>
